--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "marked": "^0.3.3",
     "nib": "^1.1.0",
     "stylus": "^0.50.0"
+  },
+  "devDependencies": {
+    "typescript": "^1.5.0-alpha"
   }
 }
