--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "superpowers-docs",
   "version": "1.0.0",
+  "scripts": {
+    "build": "cd src && tsc"
+  },
   "dependencies": {
     "express": "^4.12.3",
     "highlight.js": "^8.4.0",
@@ -10,6 +13,6 @@
     "stylus": "^0.50.0"
   },
   "devDependencies": {
-    "typescript": "^1.5.0-alpha"
+    "typescript": "1.5.0-alpha"
   }
 }
