--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "superpowers-docs",
-  "version": "1.0.0",
-  "scripts": {
-    "build": "tsc -p src"
+  "description": "Official documentation for Superpowers",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/superpowers/docs.superpowers-html5.com"
   },
-  "dependencies": {
-    "express": "^4.12.3",
-    "express-expose": "^0.3.4",
-    "highlight.js": "^9.0.0",
-    "jade": "^1.9.2",
-    "marked": "^0.3.3",
-    "nib": "^1.1.0",
-    "stylus": "^0.50.0"
+  "main": "src/index.js",
+  "scripts": {
+    "build": "tsc -p src",
+    "watch": "tsc -w -p src",
+    "start": "node src/index.js"
   },
   "devDependencies": {
-    "typescript": "1.6.2"
+    "typescript": "~1.7.5"
+  },
+  "dependencies": {
+    "express": "~4.13.3",
+    "express-expose": "~0.3.4",
+    "highlight.js": "~9.1.0",
+    "jade": "~1.11.0",
+    "marked": "~0.3.5",
+    "nib": "~1.1.0",
+    "stylus": "~0.53.0"
   }
 }
